[package]
name = "chrono-kit"
version = "0.1.0"
edition = "2024"
description = "A time manipulation toolkit built on chrono"
license = "MIT OR Apache-2.0"
authors = ["Wang Liu <liuwang_job@163.com>"]
repository = "https://github.com/wangLiu-gh/chrono-kit"
documentation = "https://docs.rs/chrono-kit"
keywords = ["chrono", "tool", "kit", "time", "date", "datetime"]
categories = ["date-and-time"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.41" }
thiserror = "2.0.14"

[features]
default = []
chrono-serde = ["chrono/serde"]                       # 透传 serde 特性
chrono-rkyv-16 = ["chrono/rkyv-16"]                   # 透传系统时钟支持
chrono-rkyv-32 = ["chrono/rkyv-32"]                   # 透传系统时钟支持
chrono-rkyv-64 = ["chrono/rkyv-64"]                   # 透传系统时钟支持
chrono-rkyv-validation = ["chrono/rkyv-validation"]   # 透传系统时钟支持
chrono-arbitrary = ["chrono/arbitrary"]               # 透传系统时钟支持
chrono-unstable-locales = ["chrono/unstable-locales"] # 透传本地化支持
