[package]
name = "chrono-kit"
version = "0.1.0"
edition = "2024"
description = "A time manipulation toolkit built on chrono"
license = "MIT OR Apache-2.0"
authors = ["Wang Liu <liuwang_job@163.com>"]
repository = "https://github.com/wangLiu-gh/chrono-kit"
documentation = "https://docs.rs/chrono-kit"
keywords = ["chrono", "tool", "kit", "time", "date"]
categories = ["date-and-time"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.41" }
thiserror = "2.0.14"

[features]
default = []
chrono-serde = ["chrono/serde"]
chrono-rkyv-16 = ["chrono/rkyv-16"]
chrono-rkyv-32 = ["chrono/rkyv-32"]
chrono-rkyv-64 = ["chrono/rkyv-64"]
chrono-rkyv-validation = ["chrono/rkyv-validation"]
chrono-arbitrary = ["chrono/arbitrary"]
chrono-unstable-locales = ["chrono/unstable-locales"]
